<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Clean Architecture</string>
    <string name="url">http://www.android10.org/</string>

    <string name="activity_title_user_list">Users List</string>
    <string name="activity_title_user_details">User Details</string>

    <string name="btn_text_load_data">Load Sample Data</string>
    <string name="btn_text_retry">Retry</string>

    <string name="view_text_email">Email:</string>
    <string name="view_text_followers">Followers:</string>
    <string name="view_text_description">Description:</string>

    <string name="string_content_description">Non accessible view</string>

    <string name="search">Search</string>

    <string name="stop">Stop</string>
    <string name="start">Start/Stop Streaming</string>
    <string name="flash">Flash</string>
    <string name="camera">Camera</string>
    <string name="video">Video Settings</string>
    <string name="save">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="uri">URI</string>
    <string name="password_hint">Leave empty if not needed</string>
    <string name="username_hint">Leave empty if not needed</string>
    <string name="default_bitrate">0 kbps</string>
    <string name="default_stream">rtsp://wowzaipaddress:1935/live/test.stream</string>

    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    // Transitions
    <string name="transition_photo">Photo Transition</string>
    <string name="transition_text">Photo Text</string>
    <string name="delete">Delete</string>
    <string name="search_list">search list</string>
    <string name="edit">Edit</string>
    <string name="et_email">Email</string>
    <string name="et_full_name">Full Name</string>
    <string name="et_followers">Followers</string>
    <string name="et_description">Description</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">item Detail</string>
    <string name="fab_transition">fab transition</string>
    <string name="invalid_email_msg">Invalid Email or empty!</string>
    <string name="invalid_name_msg">Name shouldn\'t be empty!</string>
    <string name="invalid_number_msg">Invalid Number</string>
    <string name="network_error_persisted">No Notwork but post request persisted to queue!\n Request will be posted as soon as network is available.</string>
    <string name="network_error_not_persisted"><![CDATA[No network & could not persist request to queue!\nGoogle play services not available and android version less than 5.0!]]></string>
</resources>
