<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <EditText
        android:id="@+id/et_full_name"
        style="@style/AppTheme.EditText"
        android:hint="@string/et_full_name"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email"
            android:inputType="textWebEmailAddress" />

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_followers" />

        <EditText
            android:id="@+id/et_followers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_followers"
            android:inputType="number" />

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_description" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_description"
            android:inputType="text" />
    </LinearLayout>

</LinearLayout>