<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_row_user"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_item_user"
    android:padding="@dimen/lv_row_padding"
    tools:ignore="UseCompoundDrawables">

    <com.zeyad.cleanarchitecture.presentation.components.AutoLoadImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/lv_row_icon_width"
        android:layout_height="@dimen/lv_row_icon_width"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/string_content_description"
        android:paddingLeft="@dimen/lv_row_padding"
        android:paddingRight="@dimen/lv_row_padding"
        android:src="@drawable/ic_launcher"
        android:transitionName="@string/transition_photo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/avatar"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:textColor="@color/title_color"
        android:textSize="@dimen/lv_row_text_size"
        android:transitionName="@string/transition_text" />

</RelativeLayout>